# PQC_Cpp_microservice

./: CMakeLists.txt  CMakeLists_docker.txt  Dockerfile  README.md  data_to_encrypt.json  docker-compose.yml  temp.json
src/: main.cpp  pqc_service.cpp  pqc_service.h
